unpackaged/main/default/objects/User/fields/AFCPricingApprover1__c.field-meta.xml
<CustomField>
    <fullName>AFCPricingApprover1__c</fullName>
    <label>Quoting 1st Level AFC Pricing Approver</label>
    <relationshipName>AFCPricingApprover1</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>