unpackaged/main/default/objects/User/fields/AFCPricingApprover2__c.field-meta.xml
<CustomField>
    <fullName>AFCPricingApprover2__c</fullName>
    <label>Quoting 2nd Level AFC Pricing Approver</label>
    <relationshipName>AFCPricingApprover2</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>