unpackaged/main/default/objects/User/fields/AFCPricingApprover3__c.field-meta.xml
<CustomField>
    <fullName>AFCPricingApprover3__c</fullName>
    <label>Quoting 3rd Level AFC Pricing Approver</label>
    <relationshipName>AFCPricingApprover3</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>