unpackaged/main/default/objects/User/fields/Agent_Account__c.field-meta.xml
<CustomField>
    <fullName>Agent_Account__c</fullName>
    <formula>Contact.Company_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Account</label>
    <type>Text</type>
</CustomField>