unpackaged/main/default/objects/User/fields/ATK_Regions_Picklist__c.field-meta.xml
<CustomField>
    <fullName>ATK_Regions_Picklist__c</fullName>
    <description>Used for Agents - values in this field are copied to the Regions TEXT field, which are in turn copied onto records that Agents create.  These values are then used in reporting to determine which Regions agents operate in and in Sharing Rules so that RSM can view Agent created records.
Used for RSMs - formula field on the Project refers to this field.  This field is then used for list views and reports.</description>
    <inlineHelpText>Used for Agents to track data created by Agents to determine their appropriate regions for reporting.  Used for RSMs to track Project regions - formula field on the Project refers to this field.</inlineHelpText>
    <label>Regions Picklist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AFC EAST</fullName>
            </value>
            <value>
                <fullName>AFC MIDWEST</fullName>
            </value>
            <value>
                <fullName>AFC S. CENTRAL</fullName>
            </value>
            <value>
                <fullName>AFC SOUTHEAST</fullName>
            </value>
            <value>
                <fullName>AFC WEST</fullName>
            </value>
            <value>
                <fullName>AFC House</fullName>
            </value>
            <value>
                <fullName>AFC KAFTECH</fullName>
            </value>
            <value>
                <fullName>ATC EAST</fullName>
            </value>
            <value>
                <fullName>ATC MIDWEST</fullName>
            </value>
            <value>
                <fullName>ATC S. CENTRAL</fullName>
            </value>
            <value>
                <fullName>ATC SOUTHEAST</fullName>
            </value>
            <value>
                <fullName>ATC WEST</fullName>
            </value>
            <value>
                <fullName>ATC HOUSE</fullName>
            </value>
            <value>
                <fullName>UNI EAST</fullName>
            </value>
            <value>
                <fullName>UNI MIDWEST</fullName>
            </value>
            <value>
                <fullName>UNI SOUTH</fullName>
            </value>
            <value>
                <fullName>UNI WEST</fullName>
            </value>
            <value>
                <fullName>Mechanical 1</fullName>
            </value>
            <value>
                <fullName>Mechanical 2</fullName>
            </value>
            <value>
                <fullName>Mechanical 3</fullName>
            </value>
            <value>
                <fullName>Mechanical 4</fullName>
            </value>
            <value>
                <fullName>Mechanical 5</fullName>
            </value>
            <value>
                <fullName>Mechanical 8</fullName>
            </value>
            <value>
                <fullName>TJC EAST</fullName>
            </value>
            <value>
                <fullName>TJC MIDWEST</fullName>
            </value>
            <value>
                <fullName>TJC WEST</fullName>
            </value>
            <value>
                <fullName>TJC SOUTHWEST</fullName>
            </value>
            <value>
                <fullName>CANADA</fullName>
            </value>
            <value>
                <fullName>NAED House</fullName>
            </value>
            <value>
                <fullName>NAED Canada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>