unpackaged/main/default/objects/User/fields/Chicago_Sales__c.field-meta.xml
<CustomField>
    <fullName>Chicago_Sales__c</fullName>
    <description>Value of Y if Electrical Chicago Sales</description>
    <inlineHelpText>Value of Y if Electrical Chicago Sales</inlineHelpText>
    <label>Chicago Sales</label>
    <length>1</length>
    <type>Text</type>
</CustomField>