unpackaged/main/default/objects/User/fields/Dashboard__c.field-meta.xml
<CustomField>
    <fullName>Dashboard__c</fullName>
    <description>Dashboard on which user activities will be included</description>
    <inlineHelpText>Dashboard on which user activities will be included</inlineHelpText>
    <label>Dashboard</label>
    <length>50</length>
    <type>Text</type>
</CustomField>