unpackaged/main/default/objects/User/fields/Electrical_Region__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Region__c</fullName>
    <formula>IF(INCLUDES(ATK_Regions_Picklist__c, &quot;ATC WEST&quot;), &quot;West&quot;, 
IF(INCLUDES(ATK_Regions_Picklist__c, &quot;ATC SOUTHEAST&quot;),&quot;South&quot;, 
IF(INCLUDES(ATK_Regions_Picklist__c, &quot;ATC S. CENTRAL&quot;),&quot;South&quot;, 
IF(INCLUDES(ATK_Regions_Picklist__c, &quot;ATC EAST&quot;),&quot;East&quot;, 
IF(INCLUDES(ATK_Regions_Picklist__c, &quot;ATC MIDWEST&quot;),&quot;Central&quot;, &quot;&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Electrical Region</label>
    <type>Text</type>
</CustomField>