unpackaged/main/default/objects/User/fields/JDE_Salesperson_Number__c.field-meta.xml
<CustomField>
    <fullName>JDE_Salesperson_Number__c</fullName>
    <description>New JDE Salesforce Number</description>
    <externalId>true</externalId>
    <label>JDE Salesperson Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>