unpackaged/main/default/objects/User/fields/Last_Dashboard_Refresh__c.field-meta.xml
<CustomField>
    <fullName>Last_Dashboard_Refresh__c</fullName>
    <description>Tracks the last time an Agent viewed their dashboard, resulting in it automatically getting refreshed.</description>
    <label>Last Dashboard Refresh</label>
    <type>DateTime</type>
</CustomField>