unpackaged/main/default/objects/User/fields/Logo__c.field-meta.xml
<CustomField>
    <fullName>Logo__c</fullName>
    <label>Logo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>