unpackaged/main/default/objects/User/fields/MF_CM_Brand_Region_Market__c.field-meta.xml
<CustomField>
    <fullName>MF_CM_Brand_Region_Market__c</fullName>
    <description>Specify Metal Framing Cable Management Segment, Region, and Market</description>
    <inlineHelpText>Specify Metal Framing Cable Management Segment, Region, and Market</inlineHelpText>
    <label>MF CM Brand Region Market</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>COPE Midwest Electrical</fullName>
            </value>
            <value>
                <fullName>PS Midwest Electrical</fullName>
            </value>
            <value>
                <fullName>UNI Midwest Electrical</fullName>
            </value>
            <value>
                <fullName>UNI Midwest Mechanical</fullName>
            </value>
            <value>
                <fullName>COPE East Electrical</fullName>
            </value>
            <value>
                <fullName>PS East Electrical</fullName>
            </value>
            <value>
                <fullName>UNI East Electrical</fullName>
            </value>
            <value>
                <fullName>UNI East Mechanical</fullName>
            </value>
            <value>
                <fullName>COPE South Electrical</fullName>
            </value>
            <value>
                <fullName>PS South Electrical</fullName>
            </value>
            <value>
                <fullName>UNI South Electrical</fullName>
            </value>
            <value>
                <fullName>UNI South Mechanical</fullName>
            </value>
            <value>
                <fullName>COPE West Electrical</fullName>
            </value>
            <value>
                <fullName>PS West Electrical</fullName>
            </value>
            <value>
                <fullName>UNI West Electrical</fullName>
            </value>
            <value>
                <fullName>UNI West Mechanical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>