unpackaged/main/default/objects/User/fields/PGM_Visibility__c.field-meta.xml
<CustomField>
    <fullName>PGM_Visibility__c</fullName>
    <description>This multiselect pickist will be used to determine which Price Group-Level Stock Quotes this user can see.  This field is applicable for Community users only.</description>
    <inlineHelpText>This multiselect pickist will be used to determine which Price Group-Level Stock Quotes this user can see.  This field is applicable for Community users only.</inlineHelpText>
    <label>Price Group Visibility</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AFC</fullName>
            </value>
            <value>
                <fullName>ATC</fullName>
            </value>
            <value>
                <fullName>CRC</fullName>
            </value>
            <value>
                <fullName>KON</fullName>
            </value>
            <value>
                <fullName>PPC</fullName>
            </value>
            <value>
                <fullName>PST</fullName>
            </value>
            <value>
                <fullName>UNI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>