unpackaged/main/default/objects/User/fields/QS_AFC__c.field-meta.xml
<CustomField>
    <fullName>QS_AFC__c</fullName>
    <label>Quotation Specialist for AFC</label>
    <relationshipName>QS_AFC</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>