unpackaged/main/default/objects/User/fields/QS_ATC__c.field-meta.xml
<CustomField>
    <fullName>QS_ATC__c</fullName>
    <label>Quotation Specialist for ATC</label>
    <relationshipName>QS_ATC</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>