unpackaged/main/default/objects/User/fields/QS_Cope__c.field-meta.xml
<CustomField>
    <fullName>QS_Cope__c</fullName>
    <label>Quotation Specialist Cope</label>
    <relationshipName>Cope_quotations</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>