unpackaged/main/default/objects/User/fields/QS_CRC__c.field-meta.xml
<CustomField>
    <fullName>QS_CRC__c</fullName>
    <label>Quotation Specialist for CRC</label>
    <relationshipName>QS_CRC</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>