unpackaged/main/default/objects/User/fields/QS_KON__c.field-meta.xml
<CustomField>
    <fullName>QS_KON__c</fullName>
    <label>Quotation Specialist for KON</label>
    <relationshipName>QS_KON</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>