unpackaged/main/default/objects/User/fields/QS_PPC__c.field-meta.xml
<CustomField>
    <fullName>QS_PPC__c</fullName>
    <label>Quotation Specialist for PPC</label>
    <relationshipName>QS_PPC</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>