unpackaged/main/default/objects/User/fields/QS_PST__c.field-meta.xml
<CustomField>
    <fullName>QS_PST__c</fullName>
    <label>Quotation Specialist for PST</label>
    <relationshipName>QS_PST</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>