unpackaged/main/default/objects/User/fields/QS_UNI__c.field-meta.xml
<CustomField>
    <fullName>QS_UNI__c</fullName>
    <label>Quotation Specialist for UNI</label>
    <relationshipName>QS_UNI</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>