unpackaged/main/default/objects/User/fields/Quotation_Specialist_FRE__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Specialist_FRE__c</fullName>
    <label>Quotation Specialist FRE</label>
    <relationshipName>FRE_quotations</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>