unpackaged/main/default/objects/User/fields/Quotation_Specialist_USTray__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Specialist_USTray__c</fullName>
    <label>Quotation Specialist USTray</label>
    <relationshipName>USTray_quotations</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>