unpackaged/main/default/objects/User/fields/Record_ID2__c.field-meta.xml
<CustomField>
    <fullName>Record_ID2__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record ID</label>
    <type>Text</type>
</CustomField>