unpackaged/main/default/objects/User/fields/Regions__c.field-meta.xml
<CustomField>
    <fullName>Regions__c</fullName>
    <description>Regions field to contain value of Regions Picklist field so that field may be easily used to copy values to records when created/updated without having to work with a Picklist field.  Used for Agents and RSMs only.</description>
    <label>Regions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>