unpackaged/main/default/objects/User/fields/SF_Primary_Product_Category__c.field-meta.xml
<CustomField>
    <fullName>SF_Primary_Product_Category__c</fullName>
    <description>Please select the primary product category for this user. This field is used to determine LEAD and ACCOUNT assignments.
Update 4/28/14:
Used only in 2 reports for user adoption &quot;Contacts by Product Category&quot;</description>
    <inlineHelpText>Please select the primary product category for this user.</inlineHelpText>
    <label>SF Primary Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Fence</fullName>
            </value>
            <value>
                <fullName>Heritage</fullName>
            </value>
            <value>
                <fullName>Kaftech</fullName>
            </value>
            <value>
                <fullName>Mechanical</fullName>
            </value>
            <value>
                <fullName>Standard Pipe</fullName>
            </value>
            <value>
                <fullName>Telespar</fullName>
            </value>
            <value>
                <fullName>Unistrut</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>