unpackaged/main/default/objects/User/fields/System_Code__c.field-meta.xml
<CustomField>
    <fullName>System_Code__c</fullName>
    <description>Copied to records when they are created so that Countries can be separated in list views and reports (specifically for those accessing data with an International profile).</description>
    <inlineHelpText>Copied to records when they are created so that Countries can be separated in list views and reports (specifically for those accessing data with an International profile).</inlineHelpText>
    <label>System Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>