unpackaged/main/default/objects/User/fields/TEMP_Commercient_Salesperson_code__c.field-meta.xml
<CustomField>
    <fullName>TEMP_Commercient_Salesperson_code__c</fullName>
    <label>TEMP Commercient Salesperson code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>