unpackaged/main/default/objects/User/fields/User_Account_Notes__c.field-meta.xml
<CustomField>
    <fullName>User_Account_Notes__c</fullName>
    <description>Used to track &quot;old&quot; user account information - Salesperson number and Region.  Informational only.</description>
    <inlineHelpText>Used to track &quot;old&quot; user account information - Salesperson number and Region.  Informational only.</inlineHelpText>
    <label>User Account Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>