unpackaged/main/default/objects/User/fields/User_DOA_Authority_ATC__c.field-meta.xml
<CustomField>
    <fullName>User_DOA_Authority_ATC__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>This field will have one of the following numbers based off of the authority given through the DOA Quote Approval Process: 0 (default), 1, 2, 3, 4, 5. For ATC ONLY!</inlineHelpText>
    <label>User DOA Authority (ATC)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>