unpackaged/main/default/objects/User/listViews/Agents.listView-meta.xml
<ListView>
    <fullName>Agents</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USERS.ADDRESS_STATE</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>Salesperson_Number__c</columns>
    <columns>ATK_Regions_Picklist__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>Agent</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>notEqual</operation>
        <value>Atkore Disabled Agent</value>
    </filters>
    <label>Agents</label>
    <language>en_US</language>
    <sharedTo>
        <group>Administrators_Group</group>
    </sharedTo>
</ListView>