unpackaged/main/default/objects/User/listViews/ALL_ActiveUsers.listView-meta.xml
<ListView>
    <fullName>ALL_ActiveUsers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>Salesperson_Number__c</columns>
    <columns>Dashboard__c</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CommercientSF6__SalespersonCode__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>notEqual</operation>
        <value>Chatter</value>
    </filters>
    <label>ALL Active Users</label>
    <language>en_US</language>
</ListView>