unpackaged/main/default/objects/User/listViews/ALL_Inactive_Users.listView-meta.xml
<ListView>
    <fullName>ALL_Inactive_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>User_Account_Notes__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Salesperson_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>ALL Inactive Users</label>
    <language>en_US</language>
</ListView>